<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="376dp"
        android:layout_height="489dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        tools:context="bluebankapp.swe443.bluebankappandroid.CreateAccountActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/passwordEdit"
            android:layout_alignBottom="@+id/passwordEdit"
            android:layout_alignEnd="@+id/textView7"
            android:layout_alignRight="@+id/textView7"
            android:text="Password: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/ssnEdit"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="Date of Birth: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/initialDepositEdit"
            android:layout_alignBottom="@+id/initialDepositEdit"
            android:layout_alignLeft="@+id/textView13"
            android:layout_alignStart="@+id/textView13"
            android:text="Initial Deposit: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/usernameEdit"
            android:layout_alignBottom="@+id/usernameEdit"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:text="Username: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/emailEdit"
            android:layout_alignBottom="@+id/emailEdit"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:text="Email: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="SSN: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="27dp"
            android:text="FullName: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fullNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignEnd="@+id/passwordEdit"
            android:layout_alignLeft="@+id/ssnEdit"
            android:layout_alignRight="@+id/passwordEdit"
            android:layout_alignStart="@+id/ssnEdit"
            android:elevation="16dp"
            android:hint="John Smith"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/ssnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView8"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignEnd="@+id/passwordEdit"
            android:layout_alignLeft="@+id/usernameEdit"
            android:layout_alignRight="@+id/passwordEdit"
            android:layout_alignStart="@+id/usernameEdit"
            android:ems="10"
            android:hint="xxxx"
            android:inputType="number"
            android:maxLength="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/birthdayEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignEnd="@+id/ssnEdit"
            android:layout_alignLeft="@+id/ssnEdit"
            android:layout_alignRight="@+id/ssnEdit"
            android:layout_alignStart="@+id/ssnEdit"
            android:ems="10"
            android:hint="mm/dd/yyyy"
            android:maxLength="10"
            android:inputType="date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/birthdayEdit"
            android:layout_alignLeft="@+id/birthdayEdit"
            android:layout_alignRight="@+id/birthdayEdit"
            android:layout_alignStart="@+id/birthdayEdit"
            android:layout_below="@+id/birthdayEdit"
            android:ems="10"
            android:hint="john.smith@gmail.com"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passwordEdit"
            android:layout_alignLeft="@+id/passwordEdit"
            android:layout_alignRight="@+id/passwordEdit"
            android:layout_alignStart="@+id/passwordEdit"
            android:layout_below="@+id/emailEdit"
            android:ems="10"
            android:hint="username"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameEdit"
            android:layout_toEndOf="@+id/textView9"
            android:layout_toRightOf="@+id/textView9"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/initialDepositEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/passwordEdit"
            android:layout_alignRight="@+id/passwordEdit"
            android:layout_below="@+id/passwordEdit"
            android:layout_toRightOf="@+id/textView9"
            android:ems="10"
            android:hint="1000.0"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/createAccountbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:onClick="CreateAccountBtn"
        android:text="Create Account"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorLight"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
