<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bluebankapp.swe443.bluebankappandroid.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center_horizontal|start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/userName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                app:srcCompat="@drawable/blue" />

            <TextView
                android:id="@+id/welcomMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:text="Welcome to Blue Bank"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/userNameInput"
                android:layout_alignBottom="@+id/userNameInput"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:gravity="center_vertical"
                android:text="Username: "
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/userNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/welcomMsg"
                android:layout_toRightOf="@+id/userName"
                android:layout_toEndOf="@+id/userName"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_vertical"
                android:hint="username"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/passwordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/passwordInput"
                android:layout_alignBottom="@+id/passwordInput"
                android:layout_alignRight="@+id/userName"
                android:layout_alignEnd="@+id/userName"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:gravity="center_vertical"
                android:text="Password: "
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/passwordInput"
                app:srcCompat="@drawable/ic_fingerprint_black"
                android:onClick="fingerToast"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/userNameInput"
                android:layout_toRightOf="@+id/passwordTxt"
                android:layout_toEndOf="@+id/passwordTxt"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_vertical"
                android:hint="password"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ipAddrText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/ipAddrInput"
                android:layout_alignBottom="@+id/ipAddrInput"
                android:layout_alignRight="@+id/userName"
                android:layout_alignEnd="@+id/userName"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:gravity="center_vertical"
                android:text="Server IP: "
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ipAddrInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/passwordInput"
                android:layout_toRightOf="@+id/ipAddrText"
                android:layout_toEndOf="@+id/ipAddrText"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_vertical"
                android:hint="192.168.x.y"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/enterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ipAddrInput"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:onClick="submitClick"
                android:text="Sign In"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorLight"
                android:textSize="16sp" />

            <Button
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enterBtn"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:onClick="createAccountClick"
                android:text="Sign Up"
                android:background="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorLight"
                android:textSize="16sp" />

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
